Fix solarlint issues